# simple-anomaly-detector

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: transactions.csv
src/: detector.py  main.py
tests/: test_detector.py
